--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section class = "task-list">
                 <h2>Tasks</h2>
                 <div id="tasks">
-                    <div class = "task">
+                    <!-- div class = "task">
                         <div class = "content">
                             <input 
                                 type = "text"
@@ -38,7 +38,8 @@
                             <button class = "edit">Edit</button>
                             <button class = "delete">Delete</button>
                         </div>
-                    </div>
+                    </div> -->
+                    
                 </div>
             </section>
         </main>
